Fixed layout issues

--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -1,4 +1,5 @@
 /* Space out content a bit */
+@include font-awesome;
 body {
 	margin-top: 0px;
 }
